# MLFN

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: verify.yml
artifacts/evaluation/phase4/: final_evaluation_lock.json  threshold_lock.json
artifacts/preprocessing/: static_preprocessor.joblib  tabular_preprocessor.joblib  temporal_bill_scaler.joblib  temporal_payment_scaler.joblib  temporal_status_scaler.joblib
reports/: eda_bill_amount_findings.md  eda_bill_payment_relationship_findings.md  eda_payment_amount_findings.md  eda_repayment_status_findings.md  eda_static_findings.md
reports/preprocessing/: duplicate_group_audit.csv  preprocessing_metadata.json  preprocessing_quality_checks.csv  preprocessing_schema.csv  split_manifest.csv  split_summary.csv
reports/reproducibility/: final_artifact_verification.csv
reports/tables/: categorical_values.csv  column_info.csv  descriptive_stats.csv  duplicate_summary.csv  file_integrity.csv  target_distribution.csv  undocumented_values.csv
scripts/: __init__.py  audit_dataset.py  prepare_model_data.py  run_eda_bill_amount.py  run_eda_bill_payment_relationship.py  run_eda_payment_amount.py  run_eda_repayment_status.py  run_eda_static.py  run_phase3_experiments.py  run_phase4_evaluation.py  verify_final_artifacts.py
src/credit_default/: __init__.py  data_loader.py
tests/: test_data_loader.py  test_eda_bill_amount.py  test_eda_bill_payment_relationship.py  test_eda_payment_amount.py  test_eda_repayment_status.py  test_eda_static.py  test_evaluation.py  test_experiments.py  test_preprocessing.py
(+116 files in other folders)
