[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-default"
version = "0.1.0"
description = "Credit Card Default Prediction — UCI Dataset (ML Final Project)"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "torch>=2.0.0",
    "xlrd>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
